src/objects/Committed_Upsell_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Lead_BG__c</fullName>
        <description>Used to configure Lead BG</description>
        <label>Lead BG</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Role_Code__c</fullName>
        <description>Used to configure Sales role code</description>
        <label>Sales Role Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Role__c</fullName>
        <description>Used to store Sales role  from Sales role table</description>
        <label>Sales Role</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsell_Delta_Lower_Limit__c</fullName>
        <description>Used to store Upsell Delta Lower Limit</description>
        <label>Upsell Delta Lower Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell_Delta_Upper_Limit__c</fullName>
        <description>Used to store Upsell Delta Lower Limit</description>
        <label>Upsell Delta Upper Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Committed Upsell Configuration</label>
    <listViews>
        <fullName>All_Configuration</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Lead_BG__c</columns>
        <columns>Upsell_Delta_Lower_Limit__c</columns>
        <columns>Upsell_Delta_Upper_Limit__c</columns>
        <columns>Sales_Role__c</columns>
        <columns>Sales_Role_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Configuration</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Committed Upsell Configuration</pluralLabel>
</CustomObject>